[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_niivue"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.4.0",
    "pytest-xvfb",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_niivue/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
artifacts = ["jupyterlab_niivue/labextension"]
only-include = [
    "jupyterlab_niivue",
    "install.json",
]

[tool.hatch.build.hooks.version]
path = "jupyterlab_niivue/_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_niivue/labextension/static/style.js",
    "jupyterlab_niivue/labextension/package.json",
]
# Skip build if labextension already exists (pre-built in monorepo)
skip-if-exists = ["jupyterlab_niivue/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["pnpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
source_dir = "src"
build_dir = "jupyterlab_niivue/labextension"
npm = ["pnpm"]

# Don't rebuild when building wheel from sdist (assets already included)
[tool.hatch.build.hooks.jupyter-builder.wheel-build-kwargs]
skip_if_exists = ["jupyterlab_niivue/labextension/static/style.js"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
admin_check = false

[tool.check-wheel-contents]
ignore = ["W002"]