[package]
name = "niivue-tauri"
version = "0.1.0"
description = "NiiVue Tauri - Medical image viewer"
authors = ["Korbinian Eckstein <korbinian90@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/niivue/niivue-vscode"
edition = "2021"

[lib]
name = "niivue_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
